<resources>
    <string name="app_name">JumpyAlarm</string>
    <string name="alarm_tab_title">Alarms</string>
    <string name="timer_tab_title">Timers</string>
    <string name="tbd_msg">This feature is TBD.</string>
    <string name="alarm_placeholder">Alarm list will go here.</string>
    <string name="start_date_text">Not before:</string>
    <string name="repeat_label">Repeat</string>
    <string name="label_text">Label:</string>
    <string name="day_sunday">Su</string>
    <string name="day_monday">Mo</string>
    <string name="day_tuesday">Tu</string>
    <string name="day_wednesday">We</string>
    <string name="day_thursday">Th</string>
    <string name="day_friday">Fr</string>
    <string name="day_saturday">Sa</string>
    <string name="label_default">Enter label here</string>
    <string name="delete_alarm_msg">Delete this alarm?</string>
    <string name="delete_positive">Delete</string>
    <string name="sound_label_text">Sound:</string>
    <string name="cancel_text">Cancel</string>
    <string name="sound_activity_title">Select a Sound</string>
    <string name="radio_basic">Basic Sound</string>
</resources>
