<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.hellscode.jumpyalarm.ui.model.Converter"/>
        <import type="org.hellscode.jumpyalarm.ui.model.AlarmViewModel"/>
        <variable name="viewModel" type="AlarmViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/alarmTimeText"
                style="@style/ClearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@id/enabledSwitch"
                android:layout_toLeftOf="@id/enabledSwitch"
                android:layout_centerVertical="true"
                android:onClick="@{() -> viewModel.runUserSelectTimeAction()}"
                android:enabled="@{viewModel.enabled}"
                android:gravity="center_vertical"
                android:text="@{Converter.dateToTimeString(viewModel.onOrAfter)}"
                android:textSize="50sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/enabledSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:checked="@={viewModel.enabled}">

            </com.google.android.material.switchmaterial.SwitchMaterial>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{Converter.showToVisibility(viewModel.showDetails)}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:text="@string/start_date_text"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startDateText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:text="@{Converter.dateToDateString(viewModel.onOrAfter)}"
                    android:onClick="@{()->viewModel.runUserSelectDateAction()}"
                    />
            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_label"
                android:checked="@={viewModel.repeat}"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="@{Converter.showToVisibility(viewModel.repeat)}">
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/WeekdayBtn"
                    android:text="@string/day_sunday"
                    android:checked="@={Converter.daysOfWeekByteToBoolean(AlarmViewModel.MASK_SUNDAY, viewModel, viewModel.daysOfWeek)}"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/WeekdayBtn"
                    android:text="@string/day_monday"
                    android:checked="@={Converter.daysOfWeekByteToBoolean(AlarmViewModel.MASK_MONDAY, viewModel, viewModel.daysOfWeek)}"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/WeekdayBtn"
                    android:text="@string/day_tuesday"
                    android:checked="@={Converter.daysOfWeekByteToBoolean(AlarmViewModel.MASK_TUESDAY, viewModel, viewModel.daysOfWeek)}"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/WeekdayBtn"
                    android:text="@string/day_wednesday"
                    android:checked="@={Converter.daysOfWeekByteToBoolean(AlarmViewModel.MASK_WEDNESDAY, viewModel, viewModel.daysOfWeek)}"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/WeekdayBtn"
                    android:text="@string/day_thursday"
                    android:checked="@={Converter.daysOfWeekByteToBoolean(AlarmViewModel.MASK_THURSDAY, viewModel, viewModel.daysOfWeek)}"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/WeekdayBtn"
                    android:text="@string/day_friday"
                    android:checked="@={Converter.daysOfWeekByteToBoolean(AlarmViewModel.MASK_FRIDAY, viewModel, viewModel.daysOfWeek)}"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/WeekdayBtn"
                    android:text="@string/day_saturday"
                    android:checked="@={Converter.daysOfWeekByteToBoolean(AlarmViewModel.MASK_SATURDAY, viewModel, viewModel.daysOfWeek)}"/>
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nextAlarmDateText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:text="@{Converter.nextAlarmDateString(viewModel.onOrAfter, viewModel.repeat, viewModel.daysOfWeek, viewModel.enabled)}"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="0dp"
                android:button="@drawable/expandswitch"
                android:checked="@={viewModel.showDetails}"
                />
        </RelativeLayout>

    </LinearLayout></layout>
